[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/colonist.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="CircleShape2D" id=2]

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ActionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionRange"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="ActionRange" to="." method="_on_ActionRange_body_entered"]
[connection signal="body_exited" from="ActionRange" to="." method="_on_ActionRange_body_exited"]
